Add js to form submission

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <option value="" disabled selected>Pick a task type</option>
                     <option value="Print">Home</option>
                     <option value="Web">School</option>
-                    <option value="Mobile">G3</option>
+                    <option value="Mobile">Misc</option>
                 </select>
             </div>
 
