add form field values

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="form-group">
                 <select name="task-type" class="select-dropdown">
                     <option value="" disabled selected>Pick a task type</option>
-                    <option value="Print">Home</option>
-                    <option value="Web">School</option>
-                    <option value="Mobile">Misc</option>
+                    <option value="Home">Home</option>
+                    <option value="School">School</option>
+                    <option value="Misc">Misc</option>
                 </select>
             </div>
 
