--- a/index.html
+++ b/index.html
@@ -39,10 +39,19 @@
     <main class="page-content">
         <section class="task-list-wrapper">
             <h2 class="list-title">Task to Do</h2>
+            <ul class="task-list" id="task-to-do"></ul>
+        </section>
 
-            <ul class="task-list" id="task-to-do">
-                
-            </ul>
+        <!-- Tasks in Progress -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks In Progress</h2>
+            <ul class="task-list" id="task-in-progress"></ul>
+        </section>
+
+        <!-- Tasks Completed -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks Completed</h2>
+            <ul class="task-list" id="tasks-completed"></ul>
         </section>
     </main>
 
